implementing http rest for maps calls